--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ body {
 }
 
 .speaker{
-  border:2px solid #fff;
+  /* border:2px solid #fff; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -64,12 +64,12 @@ body {
   text-align: center;
   margin: 0.5em;
 }
-
+ 
 #avatars{
   display: flex;
   flex-wrap: wrap;
   margin: 1em 0;
-}
+} 
 
 .avatar-selection{
   height: 50px;
